--- a/public/Flags.html
+++ b/public/Flags.html
@@ -33,5 +33,9 @@
 	<h1>Israel</h1>
 
 	<div class="box">
+		<div class="rectangle"></div>
+		<div class="rectangle2"></div>
+	</div>
+
 </body>
 </html>
