Random color ternary exercise

--- a/public/external_js.html
+++ b/public/external_js.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<p>Inline Js</p>
-	<script src="js/external_js"></script>
+	<script src="js/external.js"></script>
 	
 		<div></div>
 
