--- a/public/Flags.html
+++ b/public/Flags.html
@@ -36,6 +36,10 @@
 		<div class="rectangle"></div>
 		<div class="rectangle2"></div>
 	</div>
+	<div class="star-4">
+		<div class="hexagon"></div>
+	</div>
+
 
 </body>
 </html>
