--- a/public/if_else_js.html
+++ b/public/if_else_js.html
@@ -6,33 +6,6 @@
 <body>
 
 
-<script> 
-var colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'violet'];
-var randomColor = colors[Math.floor(Math.random()*colors.length)];
-var message = '';
-var favorite = 'blue';
-
-	
-	if (randomColor == "red") {
-		 message = 'Red is the color of blood.';
-	} else if (randomColor == "orange") {
-		 message = 'Orange is the color of a orange.';
-	} else if (randomColor == "yellow") {
-		 message = 'Yellow is the color of the sun.';
-	} else if (randomColor == "green") {
-		 message = 'Green is the color of apples.';
-	} else if (randomColor == "blue") {
-		 message = 'Blue is the color of the sky.';
-	} else if (randomColor == "indigo") {
-		message = 'I do not know anything of that color.';
-	} else if (randomColor == "violet") {
-		message = 'I do not know anything of this color.';
-	} 
-	
-
-	console.log(message);
-	var message = (randomColor == favorite)? "This matches my favorite color": "This did not match";
-	console.log(message);
-	</script>
+<script src="/JS/if_else.js"></script>
 </body>
 </html>
