--- a/public/external_js.html
+++ b/public/external_js.html
@@ -4,18 +4,29 @@
 	<title>Nothing To See Here</title>
 </head>
 <body>
-	<p>Inline Js</p>
-	<script src="js/external.js"></script>
-	
-		<div></div>
+	<button id="btn1">Click Me!</button>
+    <button id="btn2">Remove Event Listener</button>
+    <script>
 
-	<script>
-	 var stuff = "Hey Guys!";
+        var listener = function (event) {
+            alert('You clicked the button!');
+        }
 
-	 var otherstuff = stuff + " Javascript's pretty alright. I guess";
+        // add event listener to btn1
+        var btn1 = document.getElementById('btn1');
+        btn1.addEventListener('click', listener, false);
 
-	 console.log(stuff);
-</script>
+        var remover = function (event) {
+            // remove event listener from btn1
+            btn1.removeEventListener('click', listener, false);
+            console.log('Event listener removed.');
+        }
+
+        // add event listener to btn2
+        var btn2 = document.getElementById('btn2');
+        btn2.addEventListener('click', remover, false);
+
+    </script>
 
 </body>	
 
