changes to blog/weather/ new php

--- a/public/calculators_js.html
+++ b/public/calculators_js.html
@@ -65,9 +65,9 @@
             else{
                 document.getElementById("secondNumber").value += attribute;
             }
-            var valid = '.0123456789';
-            var decimal = attribute.indexOf('data-number')
-            console.log(decimal)
+            // var valid = '.0123456789';
+            // var decimal = attribute.indexOf('data-number')
+            // console.log(decimal)
         }
         function getOperator(event){
             operator = this.getAttribute('data-operator');
