--- a/public/while_loop_js.html
+++ b/public/while_loop_js.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html>
 <head>
 	<title>While Loop</title>
@@ -57,7 +57,7 @@
 
 			i -= 1;
 
-		} while (random != guess && i != -1);
+		i} while (random != guess && i != -1);
 	}
 
 	do{
@@ -98,38 +98,38 @@
 
 
 //<---Shape game--------------->
-// do{
-// var response = prompt('Pick a Shape to calculate')
-// console.log(response)
-// if (response == 'rectangle') {
-// 	var rectLength = prompt('Rectangle Length?');
-// 	var rectWidth = prompt('Rectangle Width?');
+do{
+var response = prompt('Pick a Shape to calculate')
+console.log(response)
+if (response == 'rectangle') {
+	var rectLength = prompt('Rectangle Length?');
+	var rectWidth = prompt('Rectangle Width?');
 
-// 	function areaOfRectangle(length, width) {
-//        var message = length * width;
-//        return (message)
-//     }
-//     alert(areaOfRectangle (rectLength, rectWidth));
-// }
-// else if (response == 'triangle') {
-// 	var triHeight = prompt('Triangle Height?');
-// 	var triBase = prompt('Triangle Base?');
+	function areaOfRectangle(length, width) {
+       var message = length * width;
+       return (message)
+    }
+    alert(areaOfRectangle (rectLength, rectWidth));
+}
+else if (response == 'triangle') {
+	var triHeight = prompt('Triangle Height?');
+	var triBase = prompt('Triangle Base?');
 
-// 	function areaOfTriangle(height, base) {
-//        var message = (height * base) /2;
-//        return (message)
-//     }
-//     alert(areaOfTriangle (triHeight, triBase));
-// }
-// else if (response == 'circle') {
-// 	var circle = prompt('Circle Radius?');
+	function areaOfTriangle(height, base) {
+       var message = (height * base) /2;
+       return (message)
+    }
+    alert(areaOfTriangle (triHeight, triBase));
+}
+else if (response == 'circle') {
+	var circle = prompt('Circle Radius?');
 
-// 	function areaOfCircle(radius) {
-//        var message = (Math.PI) * (Math.pow(radius,2));
-//        return (message)
-//     }
-//     alert(areaOfCircle (circle));
-// }
+	function areaOfCircle(radius) {
+       var message = (Math.PI) * (Math.pow(radius,2));
+       return (message)
+    }
+    alert(areaOfCircle (circle));
+}
 
 
 // var confirmed
