--- a/public/Animate.html
+++ b/public/Animate.html
@@ -95,10 +95,14 @@
                   },1000)
             });
             $("#btn-hide").click(function() {
-                $('#animate-box').fadeOut()
+                $('#animate-box').animate({
+                    opacity:'0'
+                },500)
             });
             $("#btn-show").click(function() {
-                $('#animate-box').fadeIn()
+                $('#animate-box').animate({
+                    opacity:'100'
+                },500)
             });
             $('#btn-all').click(function() {
                 $('#animate-box').animate({
