--- a/public/resume.html
+++ b/public/resume.html
@@ -223,11 +223,11 @@
     <div class="col-md-5">
       <h3><em>MySQL</em></h3>
       <div class="progress">
-       <div class="progress-bar progress-bar-striped active" 
-       role="progressbar"
-       aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-       60%
-     </div>
+         <div class="progress-bar progress-bar-striped active" 
+         role="progressbar"
+         aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+         60%
+      </div>
     </div>
    </div>
  </div>
@@ -286,7 +286,7 @@
 </body>
 
 <!-- FOOTER -->
-<footer>
+<footer>P
   <p class="pull-right"><a href="#">Back to top</a></p>
 </footer>
 
