--- a/public/angular-test.html
+++ b/public/angular-test.html
@@ -7,11 +7,9 @@
 <body>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <script type="text/javascript" src="/js/angularTest.js"></script>
-	<ul>
-    	<li ng-repeat="num in [1,2,3,4,5,6,7,8,9,10]" ng-if="num % 2 == 0">{{ num }} is even </li>
-	</ul>
-	<ul>
-    <li ng-repeat="num in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" ng-if="num % 2 == 0"> {{ num }} is even! </li>
+	<ol>
+    	<li ng-repeat="letter in ['A', 'B', 'C', 'D', 'E', 'F']">{{ letter }}</li>
+	</ol>
 </ul>
 </body>
 </html>
