--- a/public/Flags.html
+++ b/public/Flags.html
@@ -37,7 +37,14 @@
 		<div class="rectangle2"></div>
 	</div>
 	<div class="star-4">
+		<div class="star-5"</div>
 		<div class="hexagon"></div>
+		<div class="small-star-1"></div>
+		<div class="small-star-2"></div>
+		<div class="small-star-3"></div>
+		<div class="small-star-4"></div>
+		<div class="small-star-5"></div>
+		<div class="small-star-6"></div>
 	</div>
 
 
